--- a/BLL/BLL_Domains/BLL_Domains.csproj
+++ b/BLL/BLL_Domains/BLL_Domains.csproj
@@ -41,7 +41,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Domains\AdditionalParametersForDomains\TypesOfStorage.cs" />
+    <Compile Include="Domains\Domains\FileDomain.cs" />
+    <Compile Include="Domains\Domains\FolderDomain.cs" />
+    <Compile Include="Domains\Domains\StorageDomain.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
