--- a/DAL/DAL_UofW/DAL_UofW.csproj
+++ b/DAL/DAL_UofW/DAL_UofW.csproj
@@ -69,6 +69,10 @@
       <Name>DAL_Repositories</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
