--- a/DAL/DAL_Database/DAL_Database.csproj
+++ b/DAL/DAL_Database/DAL_Database.csproj
@@ -60,6 +60,10 @@
       <Name>DAL_Entities</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
