--- a/DAL/DAL_Modules/DAL_Modules.csproj
+++ b/DAL/DAL_Modules/DAL_Modules.csproj
@@ -87,5 +87,8 @@
       <Name>DAL_UofW</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
