--- a/DAL/DAL_Repositories/DAL_Repositories.csproj
+++ b/DAL/DAL_Repositories/DAL_Repositories.csproj
@@ -65,6 +65,10 @@
       <Name>DAL_Entities</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
