New Problem Stop and Fix

--- a/API/API_Models/API_Models.csproj
+++ b/API/API_Models/API_Models.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\AdditionalParametersForModels\TypesOfFile.cs" />
     <Compile Include="Models\AdditionalParametersForModels\TypesOfStorage.cs" />
     <Compile Include="Models\FileModel.cs" />
     <Compile Include="Models\FolderModel.cs" />
