--- a/DAL/DAL_Modules/DAL_Modules.csproj
+++ b/DAL/DAL_Modules/DAL_Modules.csproj
@@ -89,6 +89,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="Diagrams\DAL.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
