--- a/BLL/BLL_Modules/BLL_Modules.csproj
+++ b/BLL/BLL_Modules/BLL_Modules.csproj
@@ -75,6 +75,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="Diagrams\BLL.cd" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
